[package]
name = "loterra-dao"
version = "1.0.0"
authors = ["0xantman <antho74830@gmail.com>", "Orkun Külçe <zl00ba>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0", features = ["iterator"]  }
cw-storage-plus = { version = "0.8.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
terra-cosmwasm = "2.2.0"
cw20 = "0.8.0"
#loterra-staking-contract = { version= "2.0.2", features = ["library"]}

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0", default-features = false }
